--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "mongoose": "^6.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
