--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "node server",
+    "server": "nodemon server",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
