--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-formidable": "^1.2.0",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "mongoose": "^6.5.3",
