--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "kartuli_ena",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -15,6 +15,7 @@
     "graphql": "^15.8.0",
     "mongoose": "^6.5.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -44,6 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "17.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
