--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "express-graphql": "^0.12.0",
+    "flag-icons": "^6.6.6",
     "graphql": "^15.8.0",
     "mongoose": "^6.5.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
