--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "express-formidable": "^1.2.0",
     "express-graphql": "^0.12.0",
     "flag-icons": "^6.6.6",
+    "formik": "^2.2.9",
     "graphql": "^15.8.0",
     "mongoose": "^6.5.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-typeahead": "^6.0.0-rc.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "node server",
